@@ -1,3 +1,9 @@
+* 2014-08-01 - thorben.betten@open-xchange.com
+
+ - Fix for bug 33715: Accept new parameter "attach_src" for action=get request to let the client signal RFC822 source is supposed to be
+                      attached to generated JSON mail representation
+ - Fix for bug 33850: Keep "Message-Id" header on message transport
+
 * 2014-07-29 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 33652: Also accept "updateToken" requests without service identifier 
